data/derived/comb/progs/unify/prog6219.ml.out
Characters 70-74:
  let fixpoint (f,b) = let f' b = let b' = f b in (b',b==b') in wwhile (f' b,b);;
                                                                        ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
